<resources>
    <string name="app_name">MyAppGateWay</string>
    <string name="popular_movies_btn">POPULAR MOVIES</string>
    <string name="stock_hawk_btn">STOCK HAWK</string>
    <string name="build_it_bigger_btn">BUILD IT BIGGER</string>
    <string name="make_your_app_material_btn">MAKE YOUR APP MATERIAL</string>
    <string name="go_ubiquitous_btn">GO UBIQUITOUS</string>
    <string name="cap_stone_btn">CAPSTONE: MY OWN APP</string>
</resources>
